[java] G1 GC 내용 정리