@@ -6,15 +6,48 @@
 - http://d2.naver.com/helloworld
 - http://javarevisited.blogspot.kr
 - https://www.slideshare.net/aszegedi/everything-i-ever-learned-about-jvm-performance-tuning-twitter
+- https://www.oracle.com/technetwork/articles/java/g1gc-1984535.html
 ```
 
 #### Index
 
 - [reference](reference)
 
+### GC 유형
+
+#### Serial GC (-XX:+UseSerialGC)
+
+- Young 은 Eden / S0-S1 방식. Old 는 mark-sweep-compact 알고리즘
+- GC Thread 는 1개
+- Compaction 을 기본적으로 수행
+
+#### Parallel GC (-XX:+UseParallelGC)
+
+- Young 은 Eden / S0-S1 방식. Old 는 mark-sweep-compact 알고리즘
+- GC Thread 는 N개
+- Compaction 을 기본적으로 수행
+
+#### Parallel Old GC (-XX:+UseParallelOldGC)
+
+- Young 은 Eden / S0-S1 방식. Old 는 mark-summary-compact 알고리즘
+- GC Thread 는 N개
+- Compaction 을 기본적으로 수행
+
+#### CMS GC (-XX:+UseConcMarkSweepGC)
+
+- Young 은 Eden / S0-S1 방식. Old 는 concurrent-mark-sweep 알고리즘
+- GC Thread 는 N개
+- Compaction 을 기본적으로 미 수행
+
+> 단편화되어 큰 객체가 들어갈 수 있는 공간이 없으면 Compaction 수행. 하지만 오랜시간이 걸린다.
+
+#### G1 GC (-XX:+UseG1GC)
+
+아래에 기술
+
 ### GC 동작원리
 
-#### CMS (Serial, Parallel) Garbage Collection
+#### (Serial/Parallel/ParallelOld) GC
 
 <img src="images/Screen%20Shot%202017-08-15%20at%2003.02.19.png" width="75%">
 
@@ -50,14 +83,34 @@
 
 > GC 튜닝이란 stop-the-world 시간을 줄이는 것이다
 
-#### G1 Garbage Collection
+#### CMS GC
+
+[img]
+
+Initial Mark 는 살아 있는 객체만 찾는다. (STW)
+
+Concurrent Mark 로 실제로 살았는지 확인 (**STOP 없음**)
+
+Remark 는 Concurrent Mark 단계에서 새로 추가되거나 참조가 끊긴 객체를 확인 (STW) 
+
+Concurrent Sweep 에서 객체 정리 (**STOP 없음**)
+
+STW 를 짧게 여러번 하는대신 아래의 단점이 존재한다.
+
+- 다른 GC 방식보다 메모리와 CPU를 더 많이 사용한다.
+- Compaction 단계가 기본적으로 제공되지 않는다.
+
+Compaction 을 기본적으로 수행하지 않아, 한번 수행되면 STW 가 길어지기 때문에 확인을 해보아야한다.
+
+#### G1 GC
 
 <img src="images/Screen%20Shot%202017-08-15%20at%2001.02.19.gif" width="75%">
 
-- 모든 영역이 정해져 있지 않고, Region 이라는 작은 단위로 동적할당된다
-  - Young (Eden, S0, S1), Old, Humongous, Unused 로 구성
-  - Region의 목표 수치는 2048으로 분활된다. 즉, 8G의 Heap이라면 하나의 Region의 크기는 4MB
-    - 8192MB/2048 = 4MB
+모든 영역이 정해져 있지 않고, Region 이라는 작은 단위로 동적할당된다
+
+- Young (Eden, S0, S1), Old, Humongous, Unused 로 구성
+- Region의 목표 수치는 2048으로 분활된다. 즉, 8G의 Heap이라면 하나의 Region의 크기는 4MB
+- 8192MB/2048 = 4MB
 
 > 객체 크기가 Region의 1/2보다 큰 경우, humongous 영역으로 관리
 
@@ -106,27 +159,17 @@ Old GC 를 통해 필요한 Memory 를 확보하지 못하면, Full GC 수행
 
 ### Changes in JDK 8
 
-JDK 8 에서 변경된 점
-
 - Perm 사라짐 (MetaSpace 영역으로 바뀜 - native memory)
 - PermGen 영역이 삭제되어 heap 영역에서 사용할 수 있는 메모리가 늘어났다.
 - PermGen 영역을 삭제하기 위해 존재했던 여러 복잡한 코드들이 삭제
 - PermGen영역을 스캔 하기 위해 소모되었던 시간이 감소되어 GC 성능이 향상 되었다.
 
-정리하면 JDK7 까지는
+#### Before JDK 8
 
-- new / survive / old / perm /  native  로 구분했다면
+- `new / survive / old / perm / native`  
 
-JDK8 에서는
+#### After JDK 8
 
-- new / survive / old / metaSpace 로 아키텍쳐가 변경되었고
+- `new / survive / old / metaSpace (native)`
 
-기존의 perm에 저장되어 문제를 유발하던 static Object 는 heap으로 옮겨서 GC 대상이 되도록함
-
-### CMS vs Parallel
-
-#### Parellel
-Parallel GC 방식에서는 Full GC가 수행될 때마다 Compaction 작업을 진행하기 때문에 시간이 많이 소요된다. 하지만, Full GC가 수행된 이후에는 메모리를 연속적으로 지정할 수 있어 메모리를 더 빠르게 할당할 수 있다.
-
-#### CMS
-CMS GC는 Compaction 작업을 기본으로 수행하지 않는다. Compaction 작업을 수행하지 않기 때문에 당연히 속도가 빠르다. 하지만, Compaction 작업을 수행하지 않으면 디스크 조각 모음을 실행하기 전의 상태처럼 메모리에 빈 공간이 여기저기 생겨 크기가 큰 객체가 들어갈 수 있는 공간이 없을 수 있다. 그럴때 Concurrent mode failure 경고가 발생하면서 Compaction 작업을 수행한다. 그런데, CMS GC를 사용할 때에는 Compaction 시간이 다른 Parallel GC보다 더 오래 소요된다. 그래서 오히려 더 문제가 될 수 있다
+>  기존 perm 에 저장되어 문제를 유발하던 static/string literal 은 heap 으로 옮겨져 GC 대상으로 됨
